# Projekt-PP5

./: README.md
api/: justfile  pyproject.toml
api/app/: __init__.py  routes.py  utils.py
api/app/static/css/: style.css
api/app/static/js/: api.js  main.js  router.js  storage.js
api/app/static/js/components/: Footer.js  Navbar.js
api/app/static/js/views/: Favorites.js  History.js  Home.js  Product.js  Search.js
api/app/static/opinions/: 136537247.json  162617628.json  163003681.json  187908727.json
api/app/static/products/: 136537247.json  162617628.json  163003681.json  187908727.json
api/app/templates/: index.html
